--- a/BKFoodCourt/BKFoodCourt/Web.config
+++ b/BKFoodCourt/BKFoodCourt/Web.config
@@ -47,6 +47,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="BKFoodCourt" connectionString="data source=DESKTOP-C8J1S1O\SQLEXPRESS;initial catalog=BKFOODCOURT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="BKFoodCourt" connectionString="data source=DESKTOP-9HF0RB1;initial catalog=BKFOODCOURT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
