--- a/BKFoodCourt/BKFoodCourt/BKFoodCourt.csproj
+++ b/BKFoodCourt/BKFoodCourt/BKFoodCourt.csproj
@@ -129,7 +129,7 @@
     <Content Include="Assets\img\home-slider\slider.jpg" />
     <Content Include="Assets\img\home-slider\slider1.jpg" />
     <Content Include="Assets\img\home-slider\slider2.jpg" />
-    <Content Include="Assets\img\img-1-1000x600.jpg" />
+    <Content Include="Assets\img\undraw_posting_photo.svg" />
     <Content Include="Assets\js\demo\chart-area-demo.js" />
     <Content Include="Assets\js\demo\chart-bar-demo.js" />
     <Content Include="Assets\js\demo\chart-pie-demo.js" />
@@ -1810,7 +1810,6 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Web.config" />
     <Content Include="Views\Shared\_LayoutCustomer.cshtml" />
-    <Content Include="Views\Shared\_LayoutManager.cshtml" />
     <Content Include="Views\Shared\_LayoutNotLogin.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\User\Login.cshtml" />
@@ -1842,14 +1841,17 @@
     <Compile Include="Controllers\FoodController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
-    <Compile Include="Controllers\MomoController.cs" />
+    <Compile Include="Controllers\PaymentController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\VendorController.cs" />
     <Compile Include="DatabaseAccess\Dao\FoodDao.cs" />
+    <Compile Include="DatabaseAccess\Dao\OrderDao.cs" />
     <Compile Include="DatabaseAccess\Dao\UserDao.cs" />
     <Compile Include="DatabaseAccess\EF\Account.cs" />
     <Compile Include="DatabaseAccess\EF\BKFoodCourt.cs" />
+    <Compile Include="DatabaseAccess\EF\DonHang.cs" />
     <Compile Include="DatabaseAccess\EF\Food.cs" />
+    <Compile Include="DatabaseAccess\EF\OrderDetail.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -2041,14 +2043,21 @@
     <None Include="packages.config" />
     <Content Include="Views\Shared\_LayoutCook.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Customer\Order.cshtml" />
+    <Content Include="Views\Customer\OrderDetail.cshtml" />
+    <Content Include="Views\Payment\Index.cshtml" />
+    <Content Include="Views\Customer\UpdateInfo.cshtml" />
+    <Content Include="Views\Admin\UpdateInfo.cshtml" />
     <Content Include="Views\Shared\_LayoutVendor.cshtml" />
+    <Content Include="Views\Shared\_LayoutManager.cshtml" />
     <Content Include="Views\Vendor\Index.cshtml" />
-    <Content Include="Views\Vendor\UpdateMenu.cshtml" />
-    <Content Include="Views\Vendor\VendorInfo.cshtml" />
     <Content Include="Views\Vendor\CreateAccount.cshtml" />
     <Content Include="Views\Vendor\Report.cshtml" />
     <Content Include="Views\Vendor\Statistic.cshtml" />
-    <Content Include="Views\Customer\UpdateInfo.cshtml" />
+    <Content Include="Views\Vendor\UpdateInfo.cshtml" />
+    <Content Include="Views\Vendor\UpdateMenu.cshtml" />
+    <Content Include="Views\Vendor\VendorInfo.cshtml" />
+    <Content Include="Views\Cook\UpdateInfo.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -2058,7 +2067,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Momo\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
