--- a/BKFoodCourt/BKFoodCourt/bin/BKFoodCourt.dll.config
+++ b/BKFoodCourt/BKFoodCourt/bin/BKFoodCourt.dll.config
@@ -47,6 +47,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    
-  <add name="BKFoodCourt" connectionString="data source=DESKTOP-RP6J984\MSSQLSERVER01;initial catalog=BKFOODCOURT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="BKFoodCourt" connectionString="data source=DESKTOP-RP6J984\MSSQLSERVER01;initial catalog=BKFOODCOURT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
